<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AlertDialog.AppCompat.Light"
    tools:context=".main_activity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="229dp"
        android:background="@drawable/border">

        <ImageView
            android:id="@+id/backgroundimage"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:contentDescription="@string/backgroundimage"
            android:scaleType="centerCrop"

            android:src="@drawable/background" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="169dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:contentDescription="@string/backgroundimage"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/background" />

        <LinearLayout
            android:id="@+id/profileimage"
            android:layout_width="109dp"
            android:layout_height="109dp"

            android:layout_marginLeft="25dp"
            android:layout_marginTop="120dp"
            android:background="@drawable/border"
            android:layout_marginStart="25dp">

            <ImageView
                android:layout_width="105dp"

                android:layout_height="105dp"
                android:src="@drawable/profile"
                android:contentDescription="@string/profi1">

            </ImageView>

        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="142dp"
        android:layout_marginLeft="123dp"
        android:layout_marginTop="123dp"
        android:text="@string/android"
        android:textColor="#ffffff"
        android:textSize="28sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="278dp"
        android:layout_height="58dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="80dp"
        android:orientation="horizontal">

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="72dp"
            android:layout_height="57dp"
            android:layout_weight="20"
            android:background="@drawable/border"
            android:text="@string/timeline"

            android:textSize="14sp"></Button>

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="61dp"
            android:layout_height="57dp"
            android:layout_weight="20"
            android:background="@drawable/border"
            android:text="@string/about"
            android:textSize="14sp"></Button>

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="75dp"
            android:layout_height="57dp"
            android:layout_weight="20"
            android:background="@drawable/border"
            android:text="@string/friends"
            android:textSize="14sp"></Button>

        <Button
            android:id="@+id/button9"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="72dp"
            android:layout_height="57dp"
            android:layout_weight="20"
            android:background="@drawable/border"
            android:text="@string/photos"
            android:textSize="14sp" />


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="187dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="229dp"
        android:background="@color/white"

        >

        <LinearLayout
            android:layout_width="370dp"
            android:layout_height="116dp"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="14dp"
            android:layout_marginRight="14dp"


            android:background="@drawable/border">


            <ImageView
                android:layout_width="39dp"
                android:layout_height="50dp"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="27dp"
                android:contentDescription="@string/smallimage"
                android:src="@drawable/profile" />

            <EditText
                android:layout_width="240dp"
                android:layout_height="98dp"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="3dp"
                android:autofillHints="@string/what_s_on_your_mind"
                android:background="#FFFFFF"
                android:hint="@string/what_s_on_your_mind"
                android:inputType="text|textNoSuggestions"

                android:textSize="24sp"
                tools:targetApi="o" />


        </LinearLayout>

        <Button
            android:id="@+id/button15"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="14dp"
            android:layout_marginRight="14dp"
            android:layout_marginBottom="27dp"

            android:background="#44BE2B"
            android:scrollbarStyle="insideOverlay"
            android:text="@string/post"
            android:textColor="#E2000000"
            android:textColorHighlight="#000000"
            android:textStyle="normal" />

    </RelativeLayout>

</RelativeLayout>